--- a/code/stylesheets/style.css
+++ b/code/stylesheets/style.css
@@ -67,9 +67,107 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 body {
   font-size: 62.5%;
 }
-
-.first_section{
-  width: 1030px;
-  height: 1000px;
+.logo{
+  font-size: 25px;
+  color: #fff;
+  display:block;
+  width:100px;
+  height:100px;
+}
+input{
+  width:350px;
+  height:25px;
+  margin:0px;
+  padding;0px;
+  font-size:18px;
+  vertical-align:center;
+}
+.header-background{
+  width: 1280px;
+  height: 900px;
   background: url(../images/sunset-resized.jpg)
+}
+.header-background 2nd-section{
+  font-size: 20px;
+  color:#fff;
+}
+.header-background other{
+  font-size:17px;
+  color:#fff;
+}
+li{
+  display:inline-block;
+  margin:0,0;
+  text-align:center;
+}
+.footer-background{
+  width: 1280px;
+  height: 300px;
+  background: url(../images/sunset-resized.jpg)
+}
+.how{
+  width:1280px;
+  height:600px;
+  background-color: #fff;
+  border:1px solid #c0c0c0;
+  font-size: 16px;
+}
+.how section{
+  float:left;
+  margin:auto;
+  vertical-align: middle;
+}
+.why{
+  width:1280px;
+  height:600px;
+  background-color: #fff;
+  border:1px solid #c0c0c0;
+}
+.why 1part{
+  float:left;
+  margin:auto;
+  vertical-align: middle;
+}
+.why 2part{
+  float:left;
+  margin:auto;
+  vertical-align: middle;
+}
+.why 3part{
+  float:left;
+  margin:auto;
+  vertical-align: middle;
+}
+.test{
+  width:1280px;
+  height:600px;
+  background-color: #fff;
+  border:1px solid #c0c0c0;
+}
+
+.nav{
+  display:block;
+  float:right;
+  font-size: 18px;
+  color:#fff;
+}
+
+.picture img{
+
+  height:120px;
+
+}
+.teaser img{
+  border-radius: 5px;
+  display: block;
+  margin-bottom: 22px;
+  max-width: 100%
+
+}
+
+.part img{
+  float:left;
+  height:20px;
+  width:20px;
+  display:inline-block;
 }
